Fixing some layout issues for /user_groups. Helper for Copyright notice

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,13 +153,4 @@ a.logo {
 
 .user_group {
   margin-bottom: 5px;
-
-  p {
-    margin-top: -15px;
-  }
-
-  p.mobile {
-    margin-top: -10px;
-    margin-left: -4px;
-  }
 }
